# video2prompt

./: .env.example  .gitignore  AGENTS.md  PRD.md  README.md  app.py  config.yaml  icon.icns  mac-非技术同事使用说明.md  pyproject.toml
docs/: Douyin_TikTok_Download_API_README.md  gemini 视频理解官方文档.md  huandutech API 接口对接.md  mac-非技术同事使用说明.md  product_prompt_template.xlsx  requirements-v2-按类目分析.md  requirements.md  云雾API 接口对接.md  视频内容审查.md  视频复刻提示词.md  视频脚本拆解分析.md
exports/: last_run_result.json
packaging/: video2prompt-macos.spec
scripts/: build_macos_app.sh  check_packaged_modules.py  smoke_test_macos_app.py  start.sh
tests/: test_api_key_runtime_behavior.py  test_app_bootstrap.py  test_app_cookie_state.py  test_app_diagnostics.py  test_app_mode_defaults.py  test_app_run_controller_state.py  test_app_runtime_panel.py  test_app_runtime_paths.py  test_app_table_rendering.py  test_build_macos_app_script.py  test_cache_store.py  test_clients.py  test_config.py  test_desktop_entry.py  test_duration_check_runner.py  test_duration_excel_exporter.py  test_excel_exporter.py  test_ffprobe_bundle.py  test_logging_utils.py  test_managed_parser_service.py  test_markdown_exporter.py  test_packaged_module_guard.py  test_packaging_spec.py  test_parser_client_runtime_paths.py  test_resilient_parser_client.py  test_review_result.py  test_run_export_payload.py  test_run_snapshot_store.py  test_runtime_paths.py  test_runtime_preflight.py  test_runtime_refresh.py  test_runtime_summary.py  test_smoke_test_macos_app.py  test_start_script.py  test_task_scheduler_output_format.py  test_validator.py  (+8 more)
(+49 files in other folders)
